Updated the interface

--- a/styles/Cards.module.css
+++ b/styles/Cards.module.css
@@ -13,6 +13,8 @@
 
 .green {
     border-bottom: 10px solid rgba(53, 208, 127, 1);
+    background-color: "transparent";
+    
 }
 
 .tabpanel {
@@ -34,3 +36,4 @@
 .claimbtn:hover {
     background-color: rgba(251, 204, 92, 1);
 }
+
